# algovoi-audit-verifier

./: .gitignore  AUDITOR-RUNBOOK.md  Dockerfile  LICENSE  README.md  algovoi_verify_server.py  audit-bundle.schema.json  demo_audit_bundle.py  docker-compose.vm.yml  pyproject.toml  verify_audit_bundle.py
.github/workflows/: test.yml
nginx/: verify.algovoi.co.uk.conf
tests/: test_demo_audit_bundle.py  test_server.py  test_verify_audit_bundle.py
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: canonicalize.ts  check-report.ts  checks.ts  demo.ts  extractors.ts  index.ts  types.ts  verify.ts
typescript/test/: parity.test.ts  verify.test.ts
