[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algovoi-audit-verifier"
version = "0.1.1"
description = "Standalone offline verifier for AlgoVoi selective-disclosure audit bundles. Auditor-runnable, no AlgoVoi infrastructure trust required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AlgoVoi", email = "chopmob@gmail.com" },
]
keywords = [
  "algovoi", "audit", "verifier", "jcs", "rfc8785",
  "hash-chain", "compliance", "agentic-payments",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "rfc8785>=0.1.4",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
test = [
  "pytest>=7",
  "httpx>=0.27",
]

[project.scripts]
algovoi-verify = "verify_audit_bundle:_main"
algovoi-verify-server = "algovoi_verify_server:main"

[project.urls]
Homepage = "https://verify.algovoi.co.uk"
Repository = "https://github.com/chopmob-cloud/algovoi-audit-verifier"
Issues = "https://github.com/chopmob-cloud/algovoi-audit-verifier/issues"

[tool.setuptools]
py-modules = ["verify_audit_bundle", "demo_audit_bundle", "algovoi_verify_server"]
